# HopKing

./: CMakeLists.txt  README.md  main.cpp  tmp.txt
assets/: platform1.png~
levels/: Levels.h
src/: Engine.cpp  Engine.h
src/entities/: Button.cpp  Button.h  Enemy.cpp  Enemy.h  Entities.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h
src/game-objects/: Entities.h  EntityObject.h  GameObject.h
src/game-objects/entities/: Animal.cpp  Animal.h  AnimatedSprite.cpp  AnimatedSprite.h  Background.cpp  Background.h  Button.cpp  Button.h  EndCheckpoint.cpp  EndCheckpoint.h  Enemy.cpp  Enemy.h  HealthUp.cpp  HealthUp.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Spike.cpp  Spike.h
src/scenes/: EscapeMenuScene.cpp  EscapeMenuScene.h  GameEndScene.cpp  GameEndScene.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  PlayScene.cpp  PlayScene.h  PlaySelectScene.cpp  PlaySelectScene.h  ReplayScene.cpp  ReplayScene.h  SceneManager.cpp  SceneManager.h  Scenes.h
src/utils/: InputManager.cpp  InputManager.h  LevelLoader.cpp  LevelLoader.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h
